--- a/rewrk-core/Cargo.toml
+++ b/rewrk-core/Cargo.toml
@@ -23,7 +23,7 @@ async-trait = "0.1.64"
 tracing = "0.1.37"
 num_cpus = "1.15.0"
 
-hyper = { version = "0.14", features = ["runtime", "client", "http1", "http2"] }
+hyper = { version = "0.14", features = ["runtime", "client", "http1", "http2", "backports", "deprecated"] }
 native-tls = { version = "0.2", features = ["alpn"] }
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "net"] }
 tokio-native-tls = "0.3"
